# Suffix-Collections

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: array.rs  bit.rs  bit_set.rs  lcp.rs  lib.rs  tree.rs
tests/: tests.rs
