[package]
name = "suff_collections"
version = "1.1.1"
authors = ["mov-rax-rbx"]
edition = "2018"
keywords = ["suffix", "suffix_array", "suffix_tree", "text", "no_std"]
categories = ["data-structures"]
description = "Fast realization of suffix array and suffix tree"
readme = "README.md"
repository = "https://github.com/mov-rax-rbx/Suffix-Collections"
license = "MIT"

[[bench]]
name = "bench"
harness = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
criterion = "^0.3.3"